--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -12,6 +12,6 @@ html(lang="en" class="no-js" ng-app="Archivr")
       block content
         div(ui-view)
 
-    footer(role="footer" id="footer")
+    include _partials/footer.jade
 
   block footer_scripts
