--- a/server/views/_partials/head.jade
+++ b/server/views/_partials/head.jade
@@ -21,5 +21,7 @@ block meta
   meta(name="twitter:description" content="")
   meta(name="twitter:image" content="")
 
+link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
+
 block header_scripts
   script(src="/js/app.min.js")
