add some comments

--- a/server/views/_partials/header.jade
+++ b/server/views/_partials/header.jade
@@ -1,3 +1,4 @@
+//- partial for the header bar
 header(role="header" id="header")
   nav.navbar.navbar-inverse.navbar-fixed-top
     .container-fluid
