--- a/server/views/_partials/head.jade
+++ b/server/views/_partials/head.jade
@@ -28,6 +28,7 @@ block meta
   meta(name="twitter:image" content="")
 
 link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
+link(rel="stylesheet" href="css/app.css")
 
 block header_scripts
   script(src="/js/app.min.js")
