create parent userPageController

--- a/client/app/src/views/user.html
+++ b/client/app/src/views/user.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-    <h1>The User Page</h1>
+    <h1>The User Page for {{ userPageCtrl.user }}</h1>
     <p>This page has multiple views!</p>
 </div>
 
