update gulpfile to concat css files

--- a/client/app/src/views/profileBar.html
+++ b/client/app/src/views/profileBar.html
@@ -1,8 +1,7 @@
-<link rel="stylesheet" href="/css/userPage.css">
+<!-- <link rel="stylesheet" href="/css/userPage.css"> -->
 <div class="container">
   <div class="row">
-    <img ng-src="{{ user.profileImage || 'http://www.gurucul.com/wp-content/uploads/2014/02/anonymous-user.png' }}"
-     style="max-width:100%">
+    <img ng-src="{{ user.profileImage || 'http://www.gurucul.com/wp-content/uploads/2014/02/anonymous-user.png' }}">
   </div>
   <div class="row">
     <h1>{{ user.username }}</h1>
