adjust css and class for clarity

--- a/client/app/src/views/user.html
+++ b/client/app/src/views/user.html
@@ -7,7 +7,7 @@
 
     <!-- COLUMN ONE NAMED VIEW -->
     <div class="col-sm-3">
-        <div ui-view="profile" class="profile-view"></div>
+        <div ui-view="profile"></div>
     </div>
 
     <!-- COLUMN TWO NAMED VIEW -->
