--- a/client/app/src/scss/userPage.scss
+++ b/client/app/src/scss/userPage.scss
@@ -1,6 +1,10 @@
 .profile-view {
-  .container, img {
-    max-width:100%
+  // Set container div to 100% of ui-view
+  max-width: 100%;
+
+  // Set profile image to fit container
+  img {
+    max-width:100%;
   }
 }
 
