--- a/client/app/src/views/profileBar.html
+++ b/client/app/src/views/profileBar.html
@@ -1,5 +1,4 @@
-<!-- <link rel="stylesheet" href="/css/userPage.css"> -->
-<div class="container">
+<div class="container profile-view">
   <div class="row">
     <img ng-src="{{ user.profileImage || 'http://www.gurucul.com/wp-content/uploads/2014/02/anonymous-user.png' }}">
   </div>
