--- a/client/app/src/views/profileBar.html
+++ b/client/app/src/views/profileBar.html
@@ -1,9 +1,10 @@
 <div class="container profile-view">
   <div class="row">
-    <img ng-src="{{ user.profileImage || 'http://www.gurucul.com/wp-content/uploads/2014/02/anonymous-user.png' }}">
+    <img ng-src="{{ userPageCtrl.user.profileImage || 'http://www.gurucul.com/wp-content/uploads/2014/02/anonymous-user.png' }}">
   </div>
   <div class="row">
-    <h1>{{ user.username }}</h1>
-    <p>Screenshots: {{ user.images.length }}</p>
+    <h1>{{ userPageCtrl.user.username }}</h1>
+    <p>Screenshots: {{ userPageCtrl.user.images.length }}</p>
+    <p>Galleries: {{ userPageCtrl.user.galleries.length }}</p>
   </div>
 </div>
