preprocess jade files to insert base href based on build environment, update gulp

--- a/server/views/_partials/head.jade
+++ b/server/views/_partials/head.jade
@@ -4,7 +4,7 @@ title Archivr
 meta(name="viewport" content="width=device-width, initial-scale=1")
 
 //- base URL for angular
-base(href="http://localhost:3000/")
+base(href="http:///* @echo BASE_HREF *//")
 
 //- these meta properties do not change
 meta(property="og:site_name" content="Archivr")
