add screenshotsView for user and sync up view with screenshots controller

--- a/client/app/src/views/landing.html
+++ b/client/app/src/views/landing.html
@@ -3,7 +3,7 @@
 
   <div class="container">
       <ul class="row" >
-        <li class="col-xs-6 col-md-3" ng-repeat="screenshot in landingCtrl.results">
+        <li class="col-xs-6 col-md-3" ng-repeat="screenshot in landingCtrl.screenshots">
           <a href="#" class="thumbnail">
             <img src="{{ screenshot.sizes.small.url }}" alt="{{ screenshot.sizes.small.description }}">
           </a>
