add login and signup on frontend

--- a/client/app/src/views/login.html
+++ b/client/app/src/views/login.html
@@ -1,9 +1,9 @@
 <!-- inside signup -->
 
-<div id='signup'>
+<div id='login'>
 
-  <h1>Sign up</h1>
-  <form name="signupForm" ng-submit='authCtrl.signup(username, password)'>
+  <h1>Login</h1>
+  <form name="signupForm" ng-submit='authCtrl.login(username, password)'>
     <label for="username">Create username:</label>
     <input id="username" type='text' ng-model='username'>
     <label for="password">Create password:</label>
