Add connection of username to back end and logout and gets screenshots from backend

--- a/client/app/src/views/login.html
+++ b/client/app/src/views/login.html
@@ -8,6 +8,6 @@
     <input id="username" type='text' ng-model='username'>
     <label for="password">Create password:</label>
     <input id="password" type="password" ng-model='password'>
-    <button>Sign up</button>
+    <button>Log in</button>
   </form>
 </div>
