add detail to screenshot view and add function to Screenshot factory to get single screenshot

--- a/client/app/src/views/userScreenshots.html
+++ b/client/app/src/views/userScreenshots.html
@@ -9,7 +9,7 @@
   <div class="container">
       <ul class="row" >
         <li class="col-xs-6 col-md-3" ng-repeat="screenshot in screenshotsCtrl.screenshots">
-          <a href="#" class="thumbnail">
+          <a ng-click="screenshotsCtrl.getScreenshot(screenshot._id)"href="#" class="thumbnail">
             <img src="{{ screenshot.sizes.small.url }}" alt="{{ screenshot.sizes.small.description }}">
           </a>
         </li>
