--- a/client/app/src/views/screenshot.html
+++ b/client/app/src/views/screenshot.html
@@ -1,1 +1,8 @@
-Hello from screenshot.html
+
+
+<div class="col-xs-11 col-md-11" ng-controller='ScreenshotController'>
+  <a href="#">
+    <img src="{{ screenshot.url }}" alt="{{ screenshot.description }}">
+  </a>
+</div>
+
