--- a/client/app/src/views/profileBar.html
+++ b/client/app/src/views/profileBar.html
@@ -4,6 +4,7 @@
   </div>
   <div class="row">
     <h1>{{ userPageCtrl.user.username }}</h1>
+    <a href="/edit">Edit profile</a>
     <p>Screenshots: {{ userPageCtrl.user.images.length }}</p>
     <p>Galleries: {{ userPageCtrl.user.galleries.length }}</p>
   </div>
