--- a/client/app/src/views/landing.html
+++ b/client/app/src/views/landing.html
@@ -5,7 +5,7 @@
       <ul class="row" >
         <li class="col-xs-6 col-md-3" ng-repeat="screenshot in landingCtrl.screenshots">
           <a href="#" class="thumbnail">
-            <img src="{{ screenshot.sizes.small.url }}" alt="{{ screenshot.sizes.small.description }}">
+            <img src="{{ screenshot.originalImage}}" alt="whatever">
           </a>
         </li>
       </ul>
