--- a/client/app/src/views/landing.html
+++ b/client/app/src/views/landing.html
@@ -4,7 +4,7 @@
   <div class="container">
       <ul class="row" >
         <li class="col-xs-6 col-md-3" ng-repeat="screenshot in landingCtrl.screenshots">
-          <a href="#" class="thumbnail">
+          <a href="#" class="thumbnail" ng-click="landingCtrl.changeView(screenshot._id)">
             <img src="{{ screenshot.originalImage}}" alt="whatever">
           </a>
         </li>
