--- a/client/app/src/views/userScreenshots.html
+++ b/client/app/src/views/userScreenshots.html
@@ -1,6 +1,12 @@
 <!-- Template for UserScreenshots -->
 
-  <form ng-if="screenshotsCtrl.isUser" name="newScreenshot" class="form-inline" id="newScreenshot" novalidate ng-submit="newScreenshot.$valid && screenshotsCtrl.addScreenshot(url)">
+  <form
+    ng-if="screenshotsCtrl.isUser"
+    name="newScreenshot"
+    class="form-inline"
+    id="newScreenshot"
+    ng-submit="newScreenshot.$valid && screenshotsCtrl.addScreenshot(url)"
+    novalidate>
     <!-- <label for="newUrl">Enter URL:</label> -->
     <input placeholder="Enter URL here..." id="newUrl" type="url" name="url" ng-model="url" class="form-control">
     <button class="btn" type="submit">Get Screenshot</button>
@@ -11,7 +17,10 @@
       <ul class="list-unstyled">
         <li class="col-xs-6 col-md-3" ng-repeat="screenshot in screenshotsCtrl.screenshots">
           <a href="#" class="thumbnail">
-            <img ng-click="screenshotCtrl.changeView(screenshot._id)" src="{{ screenshot.sizes.small.url }}" alt="{{ screenshot.sizes.small.description }}">
+            <img
+              ng-click="screenshotCtrl.changeView(screenshot._id)"
+              src="{{ screenshot.sizes.small.url }}"
+              alt="{{ screenshot.sizes.small.description }}" />
           </a>
         </li>
       </ul>
