basic angular functionality

--- a/client/app/src/views/screenshot.html
+++ b/client/app/src/views/screenshot.html
@@ -1,5 +1,5 @@
-<div class="col-xs-12 col-md-12" ng-controller='ScreenshotController'>
+<div class="col-xs-12 col-md-12">
   <a href="#">
-    <img src="{{ screenshot.url }}" alt="{{ screenshot.description }}">
+    <img src="{{ screenshotCtrl.screenshot.originalImage }}">
   </a>
 </div>
