--- a/client/app/src/scss/app.scss
+++ b/client/app/src/scss/app.scss
@@ -1,7 +1,14 @@
 @import "compass/css3";
 @import "breakpoint";
 
+body {
+  padding-top:40px;
+}
+
 #main {
   margin-top: 50px
 }
 
+img {
+  max-width:100%;
+}
