--- a/client/app/src/views/user.html
+++ b/client/app/src/views/user.html
@@ -1,8 +1,3 @@
-<div class="jumbotron text-center">
-    <h1>The User Page for {{ userPageCtrl.user.username }}</h1>
-    <p>This page has multiple views!</p>
-</div>
-
 <div class="row">
 
     <!-- COLUMN ONE NAMED VIEW -->
@@ -12,7 +7,7 @@
 
     <!-- COLUMN TWO NAMED VIEW -->
     <div class="col-sm-9">
-        <div ui-view="screenshots"></div>
+        <div ui-view></div>
     </div>
 
 </div>
