--- a/client/app/src/views/screenshot.html
+++ b/client/app/src/views/screenshot.html
@@ -1,5 +1,3 @@
 <div class="col-xs-12 col-md-12">
-  <a href="#">
-    <img src="{{ screenshotCtrl.screenshot.originalImage }}">
-  </a>
+  <editable-screenshot screenshot="screenshotCtrl.screenshot"></editable-screenshot>
 </div>
