--- a/client/app/src/views/about.html
+++ b/client/app/src/views/about.html
@@ -1,6 +1,14 @@
 
 <h1>About Archivr</h1>
-<p>Archivr was created for developer, designers or just everyday fans of the world wide webs.  With Archivr you can capture screenshots of your favorite websites, then annotate them with your own notes.</p>
+<h4><em>Archivr was created for developers, designers and everyday fans of the world wide webs.  With Archivr you can capture screenshots of your favorite websites, then annotate them with your own notes.</em></h4>
+<div class="row" style="margin:auto;">
+  <h2 class="col-md-3"><h2>
+  <h2 class="col-md-6" style="font-family:brush script mt;">"Archivr made all of my archiving and annotating dreams come true."</h2>
+  <h2 class="col-md-3"><h2>
+</div>
+<h2 style="font-family:brush script mt;text-align:center">- Bryan Venable, Software Engineer</h2>
+
+
 <h1>Creators</h1>
 
 
@@ -8,24 +16,28 @@
   <div class="col-md-12">
     <ul class="list-unstyled">
       <li class="col-xs-6 col-md-3" style="text-align:center">
+        <img src="img/jh.jpeg" alt="Jackson Hoose"/>
         <h3>Jackson Hoose</h3>
         <a  href="http://github.com/jacksonhoose">
           <img  src="img/github.png" alt="github octocat"/>
         </a>
       </li>
       <li class="col-xs-6 col-md-3" style="text-align:center">
+        <img src="img/rg.jpeg" alt="Ruben Gonzalez"/>
         <h3>Ruben Gonzalez</h3>
         <a href="http://github.com/ruben1">
           <img src="img/github.png" alt="github octocat"/>
         </a>
       </li>
       <li class="col-xs-6 col-md-3" style="text-align:center">
+        <img src="img/as.jpeg" alt="Andrew Smith"/>
         <h3>Andrew Smith</h3>
         <a href="http://github.com/andrewsouthpaw">
           <img src="img/github.png" alt="github octocat"/>
         </a>
       </li>
       <li class="col-xs-6 col-md-3" style="text-align:center">
+        <img src="img/rw.jpeg" alt="Rick Wuebker"/>
         <h3>Rick Wuebker</h3>
         <a href="http://github.com/rwuebker">
           <img src="img/github.png" alt="github octocat"/>
