--- a/client/app/src/views/profileBar.html
+++ b/client/app/src/views/profileBar.html
@@ -4,8 +4,8 @@
   </div>
   <div class="row">
     <h1>{{ userPageCtrl.user.username }}</h1>
-    <a href="/edit">Edit profile</a>
+   <!--  <a href="/edit">Edit profile</a>
     <p>Screenshots: {{ userPageCtrl.user.images.length }}</p>
-    <p>Galleries: {{ userPageCtrl.user.galleries.length }}</p>
+    <p>Galleries: {{ userPageCtrl.user.galleries.length }}</p> -->
   </div>
 </div>
