Added first part of making login failures visible to the user.

--- a/client/app/src/views/login.html
+++ b/client/app/src/views/login.html
@@ -2,12 +2,19 @@
 
 <div id='login'>
   <h1>Login</h1>
-  <form name="signupForm" class="form" ng-submit='authCtrl.login(username, password)'>
-    <label for="username">Enter username:</label>
-    <input id="username" type='text' class="form-control" ng-model='username'>
-    <label for="password">Enter password:</label>
-    <input id="password" class="form-control" type="password" ng-model='password'>
+  <form name='signupForm' class='form' ng-submit='authCtrl.login(username, password)'>
+    <label for='username'>Enter username:</label>
+    <input id='username' type='text' class='form-control' ng-model='username'>
+    <label for='password'>Enter password:</label>
+    <input id='password' class='form-control' type='password' ng-model='password'>
     <br>
-    <button class="btn btn-success">Log in</button>
+    <button class='btn btn-success'>Log in</button>
+    <!-- This div only shows when a login is unsuccessful -->
+    <div class='row help-block' ng-hide='validation.success'>
+      <br/>
+      <p>{{validation.success}}</p>
+      <p>Incorrect login information.</p>
+    </div>
+    <!-- End unsuccessful login div -->
   </form>
 </div>
