can access canvas at current state in controller

--- a/client/app/src/views/screenshot.html
+++ b/client/app/src/views/screenshot.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 col-md-12">
-  <editable-screenshot screenshot="screenshotCtrl.screenshot"></editable-screenshot>
+  <editable-screenshot save="screenshotCtrl.saveScreenShot" screenshot="screenshotCtrl.screenshot"></editable-screenshot>
 </div>
 
 <!-- Angulike directive -->
