Added Twitter share button for user's gallery.

--- a/client/app/src/views/user.html
+++ b/client/app/src/views/user.html
@@ -1,13 +1,16 @@
 <div class="row">
 
-    <!-- COLUMN ONE NAMED VIEW -->
-    <div class="col-sm-3">
-        <div ui-view="profile"></div>
-    </div>
+  <!-- COLUMN ONE NAMED VIEW -->
+  <div class="col-sm-3">
+    <div ui-view="profile"></div>
+  </div>
 
-    <!-- COLUMN TWO NAMED VIEW -->
-    <div class="col-sm-9">
-        <div ui-view></div>
-    </div>
-
+  <!-- COLUMN TWO NAMED VIEW -->
+  <div class="col-sm-9">
+    <div ui-view></div>
+  </div>
 </div>
+
+<!-- Angulike directive -->
+<div tweet="userPageCtrl.message"></div>
+<!-- End Angulike -->
