Fixed minor formatting for login and signup pages.

--- a/client/app/src/views/login.html
+++ b/client/app/src/views/login.html
@@ -8,7 +8,7 @@
     <label for="password">Enter passwrd:</label>
     <input id="password" class="form-control" type="password" ng-model="password">
     <br>
-    <button class="btn btn-success">Log in</button>
+    <button class="btn btn-success">Let's do this</button>
     <!-- This div only shows when a login is unsuccessful -->
     <div class="row help-block" ng-hide="authCtrl.validation.success">
       <br/>
