--- a/client/app/src/views/signup.html
+++ b/client/app/src/views/signup.html
@@ -3,7 +3,7 @@
 <div id="signup">
 
   <h1>Sign up</h1>
-  <form name="signupForm" class="form" ng-submit="authCtrl.signup(username, password)">
+  <form name="signupForm" class="form" ng-submit="authCtrl.signup(username, password)" style="width: 50%">
     <label for="username">Create usrname:</label>
     <input id="username" class="form-control" type="text" ng-model="username">
     <label for="password">Create passwrd:</label>
