Profile pic from Facebook

--- a/client/app/src/views/profileBar.html
+++ b/client/app/src/views/profileBar.html
@@ -1,7 +1,7 @@
 <div class="container profile-view">
   <div class="row">
     <a ng-href="/users/{{userPageCtrl.user.username}}/screenshots">
-      <img ng-src="{{ userPageCtrl.user.profileImage || '../img/anonymous_200.gif' }}">
+      <img ng-src="{{ userPageCtrl.profileImage || '../img/anonymous_200.gif' }}">
     </a>
   </div>
   <div class="row">
